tests/ui/transmute-ref-dst-not-nocell.msrv.stderr
error[E0277]: the trait bound `Dst: Immutable` is not satisfied
  --> $DIR/transmute-ref-dst-not-nocell.rs:22:33
   |
22 | const DST_NOT_IMMUTABLE: &Dst = transmute_ref!(&AU16(0));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Immutable` is not implemented for `Dst`
   |
note: required by `AssertDstIsImmutable`
  --> $DIR/transmute-ref-dst-not-nocell.rs:22:33
   |
22 | const DST_NOT_IMMUTABLE: &Dst = transmute_ref!(&AU16(0));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
